# bevy_clouds

./: Cargo.toml  plot.py
assets/shaders/: clouds.wgsl  post_processing.wgsl
assets/volumes/: Cloud_01.vdb  Cloud_010.vdb  Cloud_02.vdb  Cloud_03.vdb  Cloud_04.vdb  Cloud_05.vdb  Cloud_06.vdb  Cloud_07.vdb  Cloud_08.vdb  Cloud_09.vdb
src/: camera_controller.rs  cloud.rs  main.rs
src/cloud/: node.rs  pipeline.rs  settings.rs
src/volume/: loader.rs
src/volumetric_clouds/: mod.rs  render.rs  volumetric_clouds.wgsl
