[package]
name = "bevy_clouds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
vdb-rs = "0.5.0"
half = { version = "2.2.1", features = ["bytemuck"] }
bytemuck = "1.14.0"
bevy_editor_pls = "0.6.0"
